# atomic_movegen

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  perft_values.md
.devcontainer/: Dockerfile  dc  devcontainer-lock.json  devcontainer.json
.devcontainer/scripts/: post-create.sh
docs/perf/: perf_guide.md
docs/perf/5950X/: 2026-07-07.txt
docs/perf/m1/: 2026-06-24.txt  2026-06-29.txt  2026-06-30.txt  2026-07-01.txt  2026-07-02.txt
docs/perf/m4/: 2026-06-18.txt  2026-06-19.md  2026-06-20.txt  2026-07-03.txt  2026-07-05.txt  2026-07-09.txt  2026-07-09_plan2.txt  2026-07-09_plan2_baseline.txt  2026-07-10.txt
docs/plans/betweens/: plan.md
docs/plans/cleanup/: plan-code-cleanup.md  plan-code-cleanup2.md  plan-code-cleanup3.md  prompt.md  report-code-cleanup.md  report-code-cleanup2.md  report-code-cleanup3.md  report-code-cleanup4.md
docs/plans/feedback/: feedback.md  plan.md  prompt.md  report.md
docs/plans/fixes/: report.md
examples/: debug_moves.rs  fen_after.rs  list_moves.rs  pawn_debug.rs  perft.rs  perft_divide.rs  test_d5g8.rs  verify_perft.rs
plans/fixes/: fix_plan.md  prompt.md
plans/migration/: plan.md  prompt.md
plans/perf_iter/: plan.md  prompt.md
plans/performance/: plan_pext.md  prompt.md  report.md  report_magic.md  report_pext.md  report_state_info.md
plans/perft_fix/: plan.md  prompt.md
plans/perft_fix2/: report.md
src/: attacks.rs  bitboard.rs  board.rs  lib.rs  magic.rs  movegen.rs  pext.rs  types.rs  util.rs  zobrist.rs
tests/: gen_moves.py  moves.md  perft_tests.rs  verify_moves.rs
(+86 files in other folders)
