[package]
name = "atomic-movegen"
version = "0.1.0"
edition = "2024"

[dependencies]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
debug = false
incremental = false
overflow-checks = false
target-cpu = "native"

[profile.profiling]
inherits = "release"
debug = 2
strip = false

[[example]]
name = "perft"
