[package]
name = "atomic-movegen"
version = "2.0.0"
edition = "2024"
description = "Legal move generation for atomic chess."
readme = "README.md"
keywords = ["chess", "movegen", "perft"]
license = "MIT"
repository = "https://github.com/golmman/atomic_movegen"
rust-version = "1.85"
exclude = ["Fairy-Stockfish/**", "docs/**", "AGENTS.md", ".gitignore", ".gitmodules", "tests/gen_moves.py", "perft_profile.txt"]

[dependencies]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
debug = false
incremental = false
overflow-checks = false

[profile.profiling]
inherits = "release"
debug = 2
strip = false
